# harmonica-sensor-readers

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  template.env
.github/workflows/: docker.yml  lint.yml
app/: Dockerfile  requirements.in  requirements.txt
app/src/: main.py
app/src/graph/: humidity.py  light.py  mhz19_co2.py  mhz19_temperature.py  temperature.py
graph/: humidity.py  temperature.py
harmonica-sensor-reader/: main.py
harmonica_sensor_node/: cli.py  main.py
harmonica_sensor_node/graph/: humidity.py  light.py  mhz19_co2.py  mhz19_temperature.py  temperature.py
scripts/: main.py
