[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]


[tool.poetry]
name = "harmonica-sensor-node"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pyserial = "^3.5"
pytz = "^2023.3.post1"
schedule = "^1.2.1"
configargparse = "^1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
mypy = "^1.5.1"
pytest = "^7.4.2"
types-requests = "^2.31.0.7"
types-pytz = "^2023.3.1.1"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
